# JankRenderer

./: .gitignore  CMakeLists.txt  JankRenderer.sln  README.md  newOpenGL.sln
dependencies/include/glad/: glad.h
dependencies/lib/: glfw3.lib
openGL/: imgui.ini  openGL.filters  openGL.vcxproj
openGL/res/models/: Suzanne.gltf  blu.gltf  noMat.gltf  testCube.gltf  testCube.txt  testCubeBlob.gltf
openGL/res/shaders/: basicf.frag  basicv.vert  compositeShaderf.frag  cubemapf.frag  cubemapv.vert  experimentalf.frag  frameBufferf.frag  instancingv.vert  lightShaderf.frag  lightShaderv.vert  lines.geom  screenShaderf.frag  screenShaderv.vert  shaderf.frag  shaderv.vert  solidShaderf.frag  stencilOutline.frag  transparentShaderf.frag  transparentShaderv.vert
openGL/src/: Application.cpp  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Debug.cpp  Debug.h  EnvMap.cpp  EnvMap.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Settings.h  Shader.cpp  Shader.h  TextureFile.cpp  TextureFile.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
openGL/src/Samples/: Samples.cpp  Samples.h
openGL/src/Scenes/: Scene.cpp  Scene.h
openGL/src/loaders/: GLTFLoader.cpp  GLTFLoader.h
openGL/src/tests/: Test.h  Test_ClearColor.cpp  Test_ClearColor.h  Test_Compute.cpp  Test_Compute.h  Test_GeometryShader.cpp  Test_GeometryShader.h  Test_Instancing.cpp  Test_Instancing.h  Test_MSTransparency.cpp  Test_MSTransparency.h  Test_Model.cpp  Test_Model.h  Test_PBR.cpp  (+17 more)
(+40 files in other folders)
